{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 285,
  "lineage": "6a24d5a6-281c-933e-6195-5ff7eff6422c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "s1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000db6736082f3ee9",
            "arn": "arn:aws:ec2:us-east-1:913069854077:instance/i-076cb344d248db009",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-076cb344d248db009",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "kali-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-085d72c88cb192b95",
            "private_dns": "ip-192-168-0-175.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.175",
            "public_ip": "3.84.211.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:913069854077:key/62cb4b16-c97b-4cce-84ed-7b6b7602ea54",
                "throughput": 0,
                "volume_id": "vol-028efc1307cb0316a",
                "volume_size": 12,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ece0db48e2f63c8c",
            "tags": {
              "Name": "kali"
            },
            "tags_all": {
              "Name": "kali"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-034111d38d6b81759"
            ]
          },
          "dependencies": [
            "aws_key_pair.kali-key",
            "aws_security_group.kali-sg",
            "aws_subnet.publicSubnet",
            "aws_vpc.kalivpc",
            "data.aws_ami.kali",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913069854077:internet-gateway/igw-0a3cca715895ff0a9",
            "id": "igw-0a3cca715895ff0a9",
            "owner_id": "913069854077",
            "tags": {
              "Name": "kali-vpc-IG"
            },
            "tags_all": {
              "Name": "kali-vpc-IG"
            },
            "vpc_id": "vpc-05c042373923de28c"
          },
          "dependencies": [
            "aws_vpc.kalivpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913069854077:route-table/rtb-02858255bfcf289d3",
            "id": "rtb-02858255bfcf289d3",
            "owner_id": "913069854077",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a3cca715895ff0a9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kali-public-route"
            },
            "tags_all": {
              "Name": "kali-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c042373923de28c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.kalivpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913069854077:route-table/rtb-09c1f82b42777233a",
            "id": "rtb-09c1f82b42777233a",
            "owner_id": "913069854077",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "kali-private-route"
            },
            "tags_all": {
              "Name": "kali-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c042373923de28c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kalivpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085f43297f9549d4b",
            "route_table_id": "rtb-02858255bfcf289d3",
            "subnet_id": "subnet-0ece0db48e2f63c8c"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route-1",
            "aws_subnet.publicSubnet",
            "aws_vpc.kalivpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a794979231557da",
            "route_table_id": "rtb-09c1f82b42777233a",
            "subnet_id": "subnet-0a594188ed2e2076f"
          },
          "dependencies": [
            "aws_route_table.route-2",
            "aws_subnet.privateSubnet",
            "aws_vpc.kalivpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kali-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913069854077:security-group/sg-034111d38d6b81759",
            "description": "Allow TLS inbound and outbound traffic",
            "egress": [],
            "id": "sg-034111d38d6b81759",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "kali-sg",
            "name_prefix": "",
            "owner_id": "913069854077",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kali-sg"
            },
            "tags_all": {
              "Name": "kali-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c042373923de28c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kalivpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913069854077:subnet/subnet-0a594188ed2e2076f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a594188ed2e2076f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "913069854077",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kali-private-subnet"
            },
            "tags_all": {
              "Name": "kali-private-subnet"
            },
            "vpc_id": "vpc-05c042373923de28c"
          },
          "dependencies": [
            "aws_vpc.kalivpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913069854077:subnet/subnet-0ece0db48e2f63c8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ece0db48e2f63c8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "913069854077",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kali-public-subnet"
            },
            "tags_all": {
              "Name": "kali-public-subnet"
            },
            "vpc_id": "vpc-05c042373923de28c"
          },
          "dependencies": [
            "aws_vpc.kalivpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kalivpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913069854077:vpc/vpc-05c042373923de28c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0a6b54ba759de657d",
            "default_route_table_id": "rtb-0e4cbb6dd65ba0562",
            "default_security_group_id": "sg-086b6e4013cc0442f",
            "dhcp_options_id": "dopt-058e36b2e1b18a476",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05c042373923de28c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e4cbb6dd65ba0562",
            "owner_id": "913069854077",
            "tags": {
              "Name": "kali-vpc"
            },
            "tags_all": {
              "Name": "kali-vpc"
            }
          }
        }
      ]
    }
  ]
}